# quiet_observer

./: .gitignore  ARCHITECTURE.md  GENERIC_MODEL_IMPLEMENTATION.md  README.md  design_document_v1.md  pyproject.toml
src/quiet_observer/: config.py  database.py  main.py  models.py
src/quiet_observer/ml/: trainer.py
src/quiet_observer/routers/: annotations.py  frames.py  monitoring.py  projects.py  training.py
src/quiet_observer/templates/: base.html  frames_browse.html  label.html  label_done.html  monitor.html  project_detail.html  project_edit.html  project_new.html  projects.html  status.html  train.html  training_log.html
src/quiet_observer/workers/: capture.py  inference.py  manager.py
static/: label.js  style.css
