[project]
name = "quiet-observer"
version = "0.1.0"
description = "Local computer vision from YouTube live streams"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    "yt-dlp>=2024.11.0",
    "ultralytics>=8.3.0",
    "Pillow>=11.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quiet_observer"]

[project.scripts]
quiet-observer = "quiet_observer.main:run"
